--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,13 @@ threadpoolctl>=3.2.0
 urllib3>=2.0.4
 Werkzeug>=2.3.8
 gunicorn>=21.2.0
+streamlit>=1.28.0
+plotly>=5.17.0
+pandas>=2.0.0
+pyresparser>=1.0.0
+pdfminer.six>=20221105
+streamlit-tags>=1.2.8
+Pillow>=10.0.0
+pymysql>=1.1.0
+yt-dlp>=2023.7.6
+nltk>=3.8.1
